Run stress testing in subprocess